2007-05-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* VBCodeGenerator.cs: Don't add newlines when creating array creations expressions, fix the initial size expression and make sure a there's always {} somewhere.

2007-04-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* VBCodeCompiler.cs: In CompileFromFileBatch don't create error messages if compilation succeeded.

2007-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* VBCodeGenerator.cs: Small fix in GenerateBinaryOperatorExpression to always emit the IdentityInequality comparisons with Nothing in the same order (first object, then Nothing).

2007-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* VBCodeCompiler.cs: In CreateErrorFromString don't return null if the message couldn't be parsed. Temporary fix for ASP.Net to show more helpful fail messages. In CompileFromFileBatch don't try to load the assembly if the compilation returned a non-zero exit code.

2007-04-13  Frederik Carlier  <frederik.carlier@carlier-online.be>

	* VBCodeGenerator.cs: Added support for the IdentityInequality operator when comparing against Nothing.

2007-03-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* VBCodeCompiler.cs: Reference Microsoft.VisualBasic.dll and not Microsoft.VisualBasic (patch by Frederik Carlier). 
	Don't set /wlevel, vbnc doesn't support it.

2007-02-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* VBCodeCompiler.cs: Also generate temp filename if OutputAssembly is
	zero-length string. Fixed bug #80920 for VB.
	* VBCodeGenerator.cs: To match MS, do not emit empty parentheses when
	calling base ctor without arguments.

2007-02-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* VBCodeCompiler.cs: Replace mbas with vbnc. Don't send '--' to the
	compiler, since vbnc doesn't support it.

2006-04-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* VBCodeGenerator.cs: Empty line and comments should be output after 
	namespace imports.

2006-02-14  Rafael Teixeira <rafaelteixeirabr@hotmail.com> 