@@ -1,3 +1,8 @@
+2007-05-17  Rolf Bjarne Kvinge <RKvinge@novell.com> 
+
+	* VBCodeGenerator.cs: Always create escaped identifiers if the
+	  identifier matches a keyword.
+
 2007-05-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* VBCodeGenerator.cs: Don't add newlines when creating array creations expressions, fix the initial size expression and make sure a there's always {} somewhere.
